@@ -9,13 +9,15 @@ import co.javeriana.dw.organizapp.repository.PermissionRepository;
 import co.javeriana.dw.organizapp.repository.RoleRepository;
 import co.javeriana.dw.organizapp.service.PermissionService;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class PermissionServiceImpl implements PermissionService {
+
+    private static final String ROLE_NOT_FOUND_MESSAGE = "Rol no encontrado con ID: ";
+    private static final String PERMISSION_NOT_FOUND_MESSAGE = "Permiso no encontrado con ID: ";
 
     private final PermissionRepository permissionRepository;
     private final RoleRepository roleRepository;
@@ -35,24 +37,24 @@ public class PermissionServiceImpl implements PermissionService {
     public List<PermissionResponseDto> findAll() {
         return permissionRepository.findAll().stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<PermissionResponseDto> findByRoleId(Long roleId) {
         roleRepository.findById(roleId)
-                .orElseThrow(() -> new ResourceNotFoundException("Rol no encontrado con ID: " + roleId));
+                .orElseThrow(() -> new ResourceNotFoundException(ROLE_NOT_FOUND_MESSAGE + roleId));
         return permissionRepository.findByRolId(roleId).stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public PermissionResponseDto findById(Long id) {
         Permission permission = permissionRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Permiso no encontrado con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(PERMISSION_NOT_FOUND_MESSAGE + id));
         return toDto(permission);
     }
 
@@ -60,7 +62,7 @@ public class PermissionServiceImpl implements PermissionService {
     @Transactional
     public PermissionResponseDto create(PermissionRequestDto permissionDto) {
         Role role = roleRepository.findById(permissionDto.getRoleId())
-                .orElseThrow(() -> new ResourceNotFoundException("Rol no encontrado con ID: " + permissionDto.getRoleId()));
+                .orElseThrow(() -> new ResourceNotFoundException(ROLE_NOT_FOUND_MESSAGE + permissionDto.getRoleId()));
 
         Permission permission = modelMapper.map(permissionDto, Permission.class);
         permission.setRol(role);
@@ -72,9 +74,9 @@ public class PermissionServiceImpl implements PermissionService {
     @Transactional
     public PermissionResponseDto update(Long id, PermissionRequestDto permissionDto) {
         Permission existingPermission = permissionRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Permiso no encontrado con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(PERMISSION_NOT_FOUND_MESSAGE + id));
         Role role = roleRepository.findById(permissionDto.getRoleId())
-                .orElseThrow(() -> new ResourceNotFoundException("Rol no encontrado con ID: " + permissionDto.getRoleId()));
+                .orElseThrow(() -> new ResourceNotFoundException(ROLE_NOT_FOUND_MESSAGE + permissionDto.getRoleId()));
 
         existingPermission.setCodigo(permissionDto.getCodigo());
         existingPermission.setDescripcion(permissionDto.getDescripcion());
@@ -87,7 +89,7 @@ public class PermissionServiceImpl implements PermissionService {
     @Transactional
     public void delete(Long id) {
         Permission permission = permissionRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Permiso no encontrado con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(PERMISSION_NOT_FOUND_MESSAGE + id));
         permissionRepository.delete(permission);
     }
 
